friendfund/partners/ff/public/css/site.css
/* ... */
/* HOMEPAGE */
div.contentHome {
	max-width: 930px;
	margin: -210px auto 0 auto;
	padding-bottom: 60px
}
div.weNeed {
	border: 1px solid #D3D3D3;
	border-top-left-radius:10px;
	border-top-right-radius:10px;
	-moz-border-radius-topright:10px;
	-moz-border-radius-topleft:10px;
	background: white;
	margin: 0 -30px 0 -30px
}
div.formWeNeed {
	padding:30px 30px 30px 30px;
	min-height: 96px
}
div.weNeed h3 {
	font-size: 25px;
	line-height: 25px;
	font-weight: normal;
	padding-bottom: 20px
}
div.weNeed input.weNeed {
	border: 1px solid #DADADA;
	font-size: 18px;
	line-height:38px;
	height: 38px;
	padding: 0 10px
}
div.weNeed input.tipeIn {
	color: black
}
div.weNeed input.short {
	width: 120px
}
div.weNeed input.long {
	width: 500px;
}
div.weNeed input.button {
	width: 130px;
	color: black;
	font-weight: bold;
	margin-left: 30px;
}
div.formWeNeed span {
	font-size: 18px;
	font-weight: bold;
	margin-right: 5px
}
div.formWeNeed p.info {
	font-size: 11px;
	color: #999;
	margin: 5px 0 0 230px;
	line-height: 11px;
	float: left
}
div.home_expander {
	padding: 10px 0 0 225px;
	float: left;
	font-size: 12px;
	width: 522px;
	position: relative;
	margin-bottom: 10px
}
.address {
	float: left;
	width: 350px;
	padding: 0 0 0 10px;
	color: #999;
	font-size:11px
}
#homeurlexpander .title {
	float: left;
	width: 350px;
	margin: 0 0 0 10px;
	font-weight: bold;
	font-size:11px;
	height: 20px;
}
.title input {
	border: 1px solid #999999;
	font-size: 11px;
	padding:0 5px;
	width: 342px;
}
div.borderBottom .title.editable {
	font-size:11px;
	color:#0094CC;
	line-height:13px;
	color:#333
}
div.title.editable input {
	width:348px
}
div.borderBottom .title {
	font-size:12px
}
div.home_expander div.desc {
	float: left !important;
	width: 350px;
	margin: 0 0 20px 10px !important;
	position: relative;
	padding:0 !important;
	clear:none !important;
	overflow:hidden;
	height:65px;
	font-size: 11px
}
.smallAddress {
	font-size:11px;
	color:#666;
	margin-top:3px
}
div.controller {
	position: absolute;
	top: 113px;
	left: 395px;
	width: 250px
}
div.controller span {
	font-size: 10px;
	color: #616161;
	font-weight: bold;
	line-height: 18px
}
div.controller span.counterDescr {
	float: left;
	display: block;
	margin-right: 5px
}
div.controller .smallLeft, div.controller .smallRight {
	width: 18px;
	height: 18px;
	border: 1px solid #ccc;
	float: left;
	margin-left: 4px;
	display: block;
	cursor:pointer;
	margin-right: 5px
}
div.controller .smallLeft span {
	display: block;
	border-top:5px solid transparent;
	border-right:5px solid black;
	border-bottom: 5px solid transparent;
	margin: 4px 7px 0 0
}
div.controller .smallRight span {
	display: block;
	border-top:5px solid transparent;
	border-left:5px solid black;
	border-bottom: 5px solid transparent;
	margin: 4px 0 0 7px
}
div.imgCntSld {
	border: 1px solid #e5e5e5;
	height: 130px;
	width: 160px;
	float: left;
	position:relative;
}
div.imgCntSld img.displayed {
	border: 9px solid white;
	display: block;
	height: 112px;
	width: 142px;
}
div.generalPadding .home_expander {
	padding:0 0 0 0;
	font-size:11px
}
div.logoContainer {
	border-top: 1px solid #e5e5e5;
	padding: 4px 25px 0 25px;
	clear: both
}
div.logoContainer div.logoContainerRight {
	float:right
}
div.logoContainer div.logoContainerRight img{
	float:right
}
div.logoContainer div.logoContainerLeft {
	float:left;
}
div.logoContainer div.logoContainerLeft span {
	margin-top: 15px;
	display: block;
	font-size: 11px;
	float: left
}
div.featuredPoolsBox {
	padding:35px 0 0 0
}
div.featuredPoolsBox h4 {
	padding-bottom: 9px;
	font-size: 16px
}
div.homebox {
	width: 190px;
	border-bottom: 1px solid #dbdbdb;
	float: left;
	border: 1px solid #e5e5e5;
	padding: 9px 9px 0;
	margin-right: 30px; 
	background: white
}
div.lastOne {
	margin-right: 0 !important
}
div.homebox img {
	display: block;
	width: 190px;
	margin: 0 auto;
}
div.homebox h5 {
	font-size: 13px;
	display: block;
	margin: 9px auto 0 auto;
}
div.homebox span {
	color: #b3b3b3;
	font-size: 10px;
	line-height: 12px;
	padding: 0 0 5px 0
}
span.homebox {
	display: block;
	margin: 0 auto;
	border-bottom:1px solid #dadada;
}
div.homebox span a {
	text-decoration: underline;
	font-size: 10px;
	color: #b3b3b3;
}
div.timeCounter {
	padding: 0 0 0 0;
	display: block;
	width: 100%;
	margin: 30px auto 0 auto;
	position: relative
}
div.subHeader .timeCounter {
	margin: 0
}

div.timeCounterRight {
	border-top-right-radius:10px;
	border-bottom-right-radius:10px;
	-moz-border-radius-topright:10px;
	-moz-border-radius-bottomright:10px;
	border-top-left-radius:10px;
	border-bottom-left-radius:10px;
	-moz-border-radius-topleft:10px;
	-moz-border-radius-bottomleft:10px;
	height: 10px;
	background:  #CDCCC9;
	padding: 3px
}
div.timeCounterLeft {
	height: 10px;
	background: #B6EC46;
	border-top-right-radius:10px;
	border-bottom-right-radius:10px;
	-moz-border-radius-topright:10px;
	-moz-border-radius-bottomright:10px;
	border-top-left-radius:10px;
	border-bottom-left-radius:10px;
	-moz-border-radius-topleft:10px;
	-moz-border-radius-bottomleft:10px;
}
div.timeCounter span {
	font-size: 10px;
	font-weight: bold;
	color: #3a3a3a
}
div.timeTrackerBig span.floatLeft{ line-height: 16px; margin-left: 5px; font-size: 11px}
div.timeTrackerBig span.floatRight{line-height: 16px;  font-size: 11px}
div.boxContributors {
	background: #f1c8fe;
	-moz-box-shadow: 0px 1px #d7d7d7;
	-webkit-box-shadow: 0px 1px #d7d7d7;
	box-shadow: 0 1px #d7d7d7;
	padding: 0 7px;
	text-align: center;
	clear: both;
	margin: 0 -11px 0 -11px;
	margin-top: 10px
}
div.boxContributors span {
	color: black;
	font-size:10px
}
div.boxContributors span.upper {
	text-transform: uppercase;
}
div.fbHolder {
	padding: 9px 0 9px 15px;
	margin: 1px -9px 0 -9px;
	background: #ebebeb
}
div.fbHolder img {
	width: 30px;
	height: 30px;
	float: left;
	margin-right: 8px
}
div.whatElse {
	padding-top: 30px
}
div.whatElse h4 {
	padding-bottom: 10px;
	font-size: 18px;
	color: #2C2C2C
}
/* ... */

